# RDK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat  main.cpp
cpp/: Application.cpp  Buffer.cpp  CommandPool.cpp  Debugger.cpp  DescriptorPool.cpp  Device.cpp  FrameBuffer.cpp  Image.cpp  Pipeline.cpp  Queues.cpp  RenderClient.cpp  RenderPass.cpp  Renderer.cpp  Shader.cpp  SwapChain.cpp  VertexBuffer.cpp  VertexFormat.cpp  Window.cpp  containers.cpp  main.cpp
include/: Application.h  Assert.h  Buffer.h  CommandPool.h  Core.h  Debugger.h  DescriptorPool.h  Device.h  FrameBuffer.h  Image.h  Pipeline.h  Queues.h  RenderClient.h  RenderPass.h  Renderer.h  Shader.h  SwapChain.h  VertexBuffer.h  VertexFormat.h  Window.h  containers.h
include/math/: math.h
shaders/: shader.frag  shader.vert
spirv/: shader_frag.spv  shader_vert.spv
tools/: CMakeLists.txt
